# recruiter-response-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
recruiter_response_cli/: main.py
